--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,57 @@
 .hidden {
     display: none;
 }
+
+#container{ background-image: url("../images/background.gif") ;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    background-blend-mode: multiply}
+
+
+    .puzzle-image {
+        width: 40%;
+      
+        padding: 8px;
+        cursor: pointer;
+        display: flex;
+    }
+    .drop-zone {
+        width: 49.5%;
+        height: 49.5%;
+        /* border: thin dashed white; */
+        float: left;
+        position: relative;
+       
+    }
+    
+   
+    
+    .dropzone {
+        width: 400px;
+        height: 200px;
+        border: 2px dashed #ccc;
+        text-align: center;
+        line-height: 200px;
+        font-size: 1.5em;
+        margin: 20px auto;
+    }
+    .dropzone:hover {
+        border-color: #333;
+    }
+    
+   
+  
+    
+    .puzzle-board{
+        margin-top: 40px;
+        height:auto;
+        display: inline-block;
+        border: medium solid #333;
+        background-color: #000;
+        color: inherit;
+        overflow: hidden;
+      
+
+    }
+   
