--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
 }
 
 
-#container{ background-image: url("../images/background.jpg") ;
+#container{ background-image: url("../images/background-2.gif") ;
      
     background-size:cover;
     background-repeat: no-repeat;
