--- a/css/main.css
+++ b/css/main.css
@@ -2,8 +2,85 @@
     display: none;
 }
 
-body {
-    background-image: url(../images/background.jpg);
-    margin:0px ;
-    border-style: double;
+
+#container{
+    text-align: center;
+    width: 1200px;
+    height: auto;
+    text-align: center;
+    
 }
+#container h1{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 50px;
+    color: rgb(19, 20, 20);
+    text-align: center;
+}
+#container p{
+    color: aliceblue;
+    font-size: 20px;
+}
+    .puzzle-image {
+       width: 20%;
+       display: inline;
+        padding: 8px;
+       cursor: pointer;
+    }
+
+    .puzzle-image:nth-child(even) {
+      
+        clear: both;
+    }
+    .puzzle-image:nth-child(odd) {
+        
+        clear: both;
+    }
+    .puzzle-pieces {
+        margin-top: 40px;
+        height: auto;
+        display: inline-block;
+        border: medium solid #333;
+        
+        color: inherit;
+        overflow: hidden;
+   
+    }
+    
+    
+  
+    .drop-zone {
+        width: 22%;
+        height: 49.5%;
+        /* border: thin dashed white; */
+        border: #333;
+        float: left;
+        position: relative;
+    }
+    
+    .drop-zone img {
+        float: none;
+        padding: 0px;
+        position: absolute;
+       
+    }
+    
+    
+    
+     .puzzle-board {
+       
+        
+        height: 70px;
+        width: 450px;
+        display: block;
+        border: medium solid rgb(158, 25, 25);
+        
+        color: inherit;
+        overflow: hidden;
+        
+        margin-left: 400px;
+        margin-top: 300px;
+    }
+    
+  
+  
+      
